# configuration_loader

./: .gitignore  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: publish_package.yml  test.yml
configloader/: __init__.py  cli.py  core.py  exceptions.py  sources.py
configloader/parsers/: base.py  json_parser.py  toml_parser.py  yaml_parser.py
docs/: changelog.md  conf.py  contributing.md  index.md  index.rst  installation.md
docs/api/: configloader.md  parsers.md  sources.md
docs/source/: configloader.parsers.rst  configloader.rst  modules.rst
docs/usage/: advanced.md  basic.md  custom_sources.md
tests/: config.toml  conftest.py  test_unit_core.py
