[tool.poetry]
name = "configloader"
version = "0.1.0"
description = "A plugin-ready, multi-format configuration loader for CLI tools and services."
authors = ["CubeVic<victoraguirre.f@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "configloader" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.4"
typer = "^0.15.3"
toml = "^0.10.2"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
hypothesis = "^6.131.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
